Make the external link wrap to a new line to fix columns

--- a/_sass/pages/_getting-help.scss
+++ b/_sass/pages/_getting-help.scss
@@ -336,6 +336,12 @@
           }
         }
       }
+
+      a {
+        &.external {
+          white-space: normal;
+        }
+      }
     }
   }
 
